--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -4,14 +4,12 @@ on:
   push:
     branches: [main, test]
     paths:
-      - '.github/workflows/**'      
       - 'add-like/**'
       - 'remove-like/**'
       - 'get-likes/**'
   pull_request:
     branches: [main]
     paths:
-      - '.github/workflows/**'      
       - 'add-like/**'
       - 'remove-like/**'
       - 'get-likes/**'
@@ -51,9 +49,9 @@ jobs:
           git fetch --prune --unshallow || git fetch --all
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
           else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
           fi
           if [[ -n "$CHANGED" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -95,7 +93,7 @@ jobs:
           POST_DB_NAME: ${{ secrets.POST_DB_NAME }}
           REACTIONS_DB_NAME: ${{ secrets.REACTIONS_DB_NAME }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        run: pytest tests/test_env.py
+        run: pytest tests\test_connections.py
 
   build:
     runs-on: ubuntu-latest
@@ -115,9 +113,9 @@ jobs:
           git fetch --prune --unshallow || git fetch --all
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
           else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
           fi
           if [[ -n "$CHANGED" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -157,9 +155,9 @@ jobs:
           git fetch --prune --unshallow || git fetch --all
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
           else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
           fi
           if [[ -n "$CHANGED" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -205,9 +203,9 @@ jobs:
           git fetch --prune --unshallow || git fetch --all
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
           else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E "^${{ matrix.service }}/|^\.github/workflows/" || true)
+            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
           fi
           if [[ -n "$CHANGED" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
