--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches: [main, test]
     paths:
+      - '.github/workflows/**' 
       - 'add-like/**'
       - 'remove-like/**'
       - 'get-likes/**'
   pull_request:
     branches: [main]
     paths:
+      - '.github/workflows/**'
       - 'add-like/**'
       - 'remove-like/**'
       - 'get-likes/**'
