--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -1,261 +1,209 @@
-name: Docker Build and Deploy Reactions Domain
+name: Docker Build, Push & Deploy by Service (No Matrix, Puertos Exactos, .env en EC2)
 
 on:
   push:
     branches: [main, test]
     paths:
-      - '.github/workflows/**' 
       - 'add-like/**'
-      - 'remove-like/**'
       - 'get-likes/**'
+      - 'remove-like/**'
+      - '.github/workflows/**'
   pull_request:
     branches: [main]
     paths:
-      - '.github/workflows/**'
       - 'add-like/**'
-      - 'remove-like/**'
       - 'get-likes/**'
+      - 'remove-like/**'
+      - '.github/workflows/**'
 
 env:
-    DB_HOST: ${{ secrets.DB_HOST }}
-    DB_USER: ${{ secrets.DB_USER }}
-    DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-    DB_PORT: ${{ secrets.DB_PORT }}
-    JWT_SECRET: ${{ secrets.JWT_SECRET }}
-    PET_DB_NAME: ${{ secrets.PET_DB_NAME }}
-    POST_DB_NAME: ${{ secrets.POST_DB_NAME }}
-    REACTIONS_DB_NAME: ${{ secrets.REACTIONS_DB_NAME }}
-    WEBHOOK_NOTIFICATIONS_URL: ${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
-    REDIS_HOST: ${{ secrets.REDIS_HOST }}
-    REDIS_PORT: ${{ secrets.REDIS_PORT }}
-    EC2_REACTIONS_DOMAIN_TEST: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
-    EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-    DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-    DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  JWT_SECRET: ${{ secrets.JWT_SECRET }}
+  PET_DB_NAME: ${{ secrets.PET_DB_NAME }}
+  POST_DB_NAME: ${{ secrets.POST_DB_NAME }}
+  REACTIONS_DB_NAME: ${{ secrets.REACTIONS_DB_NAME }}
+  WEBHOOK_NOTIFICATIONS_URL: ${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+  REDIS_HOST: ${{ secrets.REDIS_HOST }}
+  REDIS_PORT: ${{ secrets.REDIS_PORT }}
+  EC2_REACTIONS_DOMAIN_TEST: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+  EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  test:
+  add_like_service:
+    name: CI/CD add-like
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service: [add-like, remove-like, get-likes]
-
+    if: github.event_name == 'push' && (
+        contains(join(github.event.commits.*.modified, ','), 'add-like/') ||
+        contains(join(github.event.commits.*.added, ','), 'add-like/') ||
+        contains(join(github.event.commits.*.removed, ','), 'add-like/')
+      )
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Detect changes for service
-        id: changes
+      - name: Install dependencies & run tests
+        working-directory: ./add-like
         run: |
-          git fetch --prune --unshallow || git fetch --all
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
-          else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
-          fi
-          if [[ -n "$CHANGED" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Install dependencies
-        if: steps.changes.outputs.changed == 'true'
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r ${{ matrix.service }}/requirements.txt
-          pip install pytest python-dotenv
-
-      - name: Crear archivo .env con secrets de GitHub
-        if: steps.changes.outputs.changed == 'true'
-        working-directory: ${{ matrix.service }}
-        run: |
-          cat <<EOF > .env
-          DB_HOST=${{ secrets.DB_HOST }}
-          DB_USER=${{ secrets.DB_USER }}
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-          DB_PORT=${{ secrets.DB_PORT }}
-          PET_DB_NAME=${{ secrets.PET_DB_NAME }}
-          POST_DB_NAME=${{ secrets.POST_DB_NAME }}
-          REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
-          EOF
-
-      - name: Run environment tests
-        if: steps.changes.outputs.changed == 'true'
-        working-directory: ${{ matrix.service }}
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          PET_DB_NAME: ${{ secrets.PET_DB_NAME }}
-          POST_DB_NAME: ${{ secrets.POST_DB_NAME }}
-          REACTIONS_DB_NAME: ${{ secrets.REACTIONS_DB_NAME }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        run: pytest tests\test_connections.py
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    strategy:
-      matrix:
-        service: [add-like, remove-like, get-likes]
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Detect changes for service
-        id: changes
-        run: |
-          git fetch --prune --unshallow || git fetch --all
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
-          else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
-          fi
-          if [[ -n "$CHANGED" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
+          pip install -r requirements.txt
+          pytest
 
       - name: Build Docker image
-        if: steps.changes.outputs.changed == 'true'
-        run: docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest ./${{ matrix.service }}
-
-      - name: Save Docker image artifact
-        if: steps.changes.outputs.changed == 'true'
-        run: docker save ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest -o ${{ matrix.service }}.tar
-
-      - uses: actions/upload-artifact@v4
-        if: steps.changes.outputs.changed == 'true'
-        with:
-          name: ${{ matrix.service }}-image
-          path: ${{ matrix.service }}.tar
-
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    strategy:
-      matrix:
-        service: [add-like, remove-like, get-likes]
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Detect changes for service
-        id: changes
+        working-directory: ./add-like
         run: |
-          git fetch --prune --unshallow || git fetch --all
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
-          else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
-          fi
-          if [[ -n "$CHANGED" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }} .
 
-      - uses: actions/download-artifact@v4
-        if: steps.changes.outputs.changed == 'true'
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Push image to DockerHub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
+
+      - name: Deploy in EC2 via SSH (with .env)
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          name: ${{ matrix.service }}-image
-
-      - name: Load Docker image
-        if: steps.changes.outputs.changed == 'true'
-        run: docker load -i ${{ matrix.service }}.tar
-
-      - name: Login to Docker Hub
-        if: steps.changes.outputs.changed == 'true'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
-
-      - name: Push Docker image
-        if: steps.changes.outputs.changed == 'true'
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: push
-    strategy:
-      matrix:
-        service: [add-like, remove-like, get-likes]
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Detect changes for service
-        id: changes
-        run: |
-          git fetch --prune --unshallow || git fetch --all
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            git fetch origin ${{ github.base_ref }}
-            CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^${{ matrix.service }}/" || true)
-          else
-            CHANGED=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^${{ matrix.service }}/" || true)
-          fi
-          if [[ -n "$CHANGED" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Seleccionar ambiente y SSH key
-        if: steps.changes.outputs.changed == 'true'
-        id: select-env
-        run: |
-          if [[ "${{ github.ref }}" == "refs/heads/test" ]]; then
-            echo "host=${{ secrets.EC2_QA }}" >> $GITHUB_OUTPUT
-            echo "key<<EOF" >> $GITHUB_OUTPUT
-            echo "${{ secrets.SSH_KEY_QA }}" >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-          else
-            echo "host=${{ secrets.EC2_PROD }}" >> $GITHUB_OUTPUT
-            echo "key<<EOF" >> $GITHUB_OUTPUT
-            echo "${{ secrets.SSH_KEY_PROD }}" >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Deploy updated microservice to EC2 via SSH
-        if: steps.changes.outputs.changed == 'true'
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ steps.select-env.outputs.host }}
+          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
           username: ubuntu
-          key: ${{ steps.select-env.outputs.key }}
-          port: 22
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker rm -f ${{ matrix.service }} || true
+            cat <<EOF > /home/ubuntu/add-like.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
 
-            export DB_HOST='${{ secrets.DB_HOST }}'
-            export DB_USER='${{ secrets.DB_USER }}'
-            export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
-            export DB_PORT='${{ secrets.DB_PORT }}'
-            export PET_DB_NAME='${{ secrets.PET_DB_NAME }}'
-            export POST_DB_NAME='${{ secrets.POST_DB_NAME }}'
-            export REACTIONS_DB_NAME='${{ secrets.REACTIONS_DB_NAME }}'
-            export JWT_SECRET='${{ secrets.JWT_SECRET }}'
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
+            docker stop add-like || true && docker rm add-like || true
+            docker run -d --name add-like \
+              --env-file /home/ubuntu/add-like.env \
+              -p 6001:6001 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/add-like:${{ github.sha }}
 
-            # Puertos según microservicio
-            if [ "${{ matrix.service }}" = "add-like" ]; then
-              docker run -d --name add-like -p 6001:6001 ${{ env.DOCKERHUB_USERNAME }}/add-like:latest
-            elif [ "${{ matrix.service }}" = "remove-like" ]; then
-              docker run -d --name remove-like -p 6002:6002 ${{ env.DOCKERHUB_USERNAME }}/remove-like:latest
-            elif [ "${{ matrix.service }}" = "get-likes" ]; then
-              docker run -d --name get-likes -p 6003:6003 ${{ env.DOCKERHUB_USERNAME }}/get-likes:latest
-            fi
+  get_likes_service:
+    name: CI/CD get-likes
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (
+        contains(join(github.event.commits.*.modified, ','), 'get-likes/') ||
+        contains(join(github.event.commits.*.added, ','), 'get-likes/') ||
+        contains(join(github.event.commits.*.removed, ','), 'get-likes/')
+      )
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies & run tests
+        working-directory: ./get-likes
+        run: |
+          pip install -r requirements.txt
+          pytest
+
+      - name: Build Docker image
+        working-directory: ./get-likes
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }} .
+
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Push image to DockerHub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+
+      - name: Deploy in EC2 via SSH (with .env)
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cat <<EOF > /home/ubuntu/get-likes.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
+
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+            docker stop get-likes || true && docker rm get-likes || true
+            docker run -d --name get-likes \
+              --env-file /home/ubuntu/get-likes.env \
+              -p 6003:6003 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-likes:${{ github.sha }}
+
+  remove_like_service:
+    name: CI/CD remove-like
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (
+        contains(join(github.event.commits.*.modified, ','), 'remove-like/') ||
+        contains(join(github.event.commits.*.added, ','), 'remove-like/') ||
+        contains(join(github.event.commits.*.removed, ','), 'remove-like/')
+      )
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies & run tests
+        working-directory: ./remove-like
+        run: |
+          pip install -r requirements.txt
+          pytest
+
+      - name: Build Docker image
+        working-directory: ./remove-like
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }} .
+
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Push image to DockerHub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
+
+      - name: Deploy in EC2 via SSH (with .env)
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_REACTIONS_DOMAIN_TEST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cat <<EOF > /home/ubuntu/remove-like.env
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            PET_DB_NAME=${{ secrets.PET_DB_NAME }}
+            POST_DB_NAME=${{ secrets.POST_DB_NAME }}
+            REACTIONS_DB_NAME=${{ secrets.REACTIONS_DB_NAME }}
+            WEBHOOK_NOTIFICATIONS_URL=${{ secrets.WEBHOOK_NOTIFICATIONS_URL }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            EOF
+
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
+            docker stop remove-like || true && docker rm remove-like || true
+            docker run -d --name remove-like \
+              --env-file /home/ubuntu/remove-like.env \
+              -p 6002:6002 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/remove-like:${{ github.sha }}
