--- a/.github/workflows/reactions-domain-deploy.yml
+++ b/.github/workflows/reactions-domain-deploy.yml
@@ -41,6 +41,7 @@ jobs:
       getlikes: ${{ steps.filter.outputs.getlikes }}
       removelike: ${{ steps.filter.outputs.removelike }}
     steps:
+      - uses: actions/checkout@v4   # 👈 Necesario para que el filtro vea el repo
       - uses: dorny/paths-filter@v3
         id: filter
         with:
